# Blood_Connect

./: .jekyllignore  .pages-rebuild  CNAME  README.md  _config.yml  package.json
blood_connect/: .firebaserc  .flutter-plugins-dependencies  .gitignore  .pages-rebuild  CMakeLists.txt  pubspec.yaml
blood_connect-backend/: README.md  index.js  package-lock.json  package.json
blood_connect/android/app/: build.gradle.kts  google-services.json
blood_connect/android/app/src/main/: AndroidManifest.xml
blood_connect/functions/: index.js  package.json
blood_connect/include/: utils.h
blood_connect/ios/Runner.xcodeproj/: project.pbxproj
blood_connect/lib/: fcm_helper.dart  main.dart
blood_connect/lib/models/: bloodgroup_dropdown.dart  constants.dart
blood_connect/lib/screens/: admin_dashboard.dart  analytics_tab.dart  donor_dashboard.dart  donor_history_screen.dart  login_screen.dart  notification_screen.dart  profile_screen.dart  profile_tab.dart  recipient_dashboard.dart  recipient_history_tab.dart  request_history_screen.dart  signup_screen.dart
blood_connect/lib/services/: notification_services.dart  request_service.dart
blood_connect/macos/Runner/Configs/: AppInfo.xcconfig
blood_connect/src/: firestore_bridge.cpp  main.cpp  notification_helper.cpp  utils.cpp
blood_connect/test/: widget_test.dart
blood_connect/web/: firebase-messaging-sw.js  index.html
blood_connect/windows/runner/: Runner.rc
